gl31-master/src/test/deca/context/invalid/sansobjet/missing_op.deca
// Description:
//    Variable manquante
//
// Resultats:
//    Ligne 11: Pas de variable après '+'
//
// Historique:
//    cree le 19/01/2021
{
   int a = 9;
   float f = a +;
}
